fix mis-alignment Fixes #33454

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -442,6 +442,8 @@
     padding: 4px 6px;
     color: hsl(0deg 0% 33%);
     border-radius: 4px;
+    box-sizing: border-box;
+    height: 31px !important;
     border: 1px solid hsl(0deg 0% 80%);
     box-shadow: inset 0 1px 1px hsl(0deg 0% 0% / 7.5%);
     transition:
